[project]
name = "git-filter-repo"
dynamic = ["version", "urls"]
description = "Quickly rewrite git repository history"
authors = [
    {name = "Elijah Newren", email = "newren@gmail.com"},
    {name = "Peter A.", email = "ink.splatters@pm.me"}
]
dependencies = []
license.text = "MIT"
requires-python = ">=3.6"

classifiers = [
    "Development Status :: 4 - Beta",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[project.scripts]
git-filter-repo = "git_filter_repo:main"

[build-system]
requires = [
    "hatchling",
    "hatch-vcs",
    "hatch-mypyc>=0.16.0",
]

build-backend = "hatchling.build"

[tool.hatch]
packages = []

[tool.hatch.build]
packages = []
only-packages = false
artifacts = ["git_filter_repo.py"]

[tool.hatch.build.targets.wheel]
include = ["git_filter_repo.py"]
packages = []

[tool.hatch.build.targets.wheel.hooks.mypyc]
dependencies = ["mypy>=1.13.0"]
enable = true
module-patterns = ["git_filter_repo"]

[tool.hatch.build.hooks.vcs]
version-file = "_version.py"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.metadata.hooks.vcs.urls]
Homepage = "https://github.com/ink-splatters/git-filter-repo"
Issues = "https://github.com/ink-splatters/git-filter-repo/issues/"
source_archive = "https://github.com/ink-splatters/git-filter-repo/archive/{commit_hash}.zip"

[tool.hatch.version]
source = "vcs"

[tool.rye]
managed = true
dev-dependencies = [
    "hatch>=1.13.0",
    "hatch-vcs>=0.4.0",
    "hatch-mypyc>=0.16.0",
    "mypy>=1.13.0",
    "ruff>=0.7.2",
    "pyannotate>=1.2.0",
]
